# openfda-token-lean-mcp

./: .gitignore  LICENSE  MEASUREMENT.md  README.md  pyproject.toml
scripts/: smoke.py
src/openfda_lean_mcp/: __init__.py  client.py  fields.py  query.py  server.py  shaper.py
tests/: test_client.py  test_query.py  test_shaper.py
