[project]
name = "openfda-token-lean-mcp"
version = "0.0.1"
description = "Token-lean, model-agnostic MCP server over the openFDA drug API (adverse events, labels, recalls)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.27.2",
]

[project.scripts]
openfda-lean-mcp = "openfda_lean_mcp.server:main"

[project.optional-dependencies]
# Phase 2 measurement harness only — NOT a server runtime dependency.
measure = ["google-genai>=1.0"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openfda_lean_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
